--- a/NodejsServer/package.json
+++ b/NodejsServer/package.json
@@ -12,6 +12,7 @@
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "morgan": "^1.10.0",
     "node-fetch": "^3.3.2"
   }
 }
